scss: fix contrast issues of static and dynamic outputs

--- a/scss/_react.scss
+++ b/scss/_react.scss
@@ -1,5 +1,3 @@
-.command,
-.copy-hint,
 .static-output,
 .dynamic-output {
   padding: 1px 3px;
@@ -9,14 +7,18 @@
 
 pre,
 code {
-  .command,
-  .copy-hint,
   .static-output,
   .dynamic-output {
     padding: 2px 4px;
     margin: -2px -4px;
-    border-radius: 4px;
   }
+}
+
+.static-output:hover,
+.dynamic-output:hover {
+  position: relative;
+  z-index: 1;
+  color: $body-bg;
 }
 
 .static-output:hover {
